--- a/Text_Summarization_Using_Ai.ipynb
+++ b/Text_Summarization_Using_Ai.ipynb
@@ -170,7 +170,7 @@
         "\n",
         "print(f\" Actual Transcript Text: {text}\")\n",
         "\n",
-        "palm.configure(api_key='AIzaSyAUMJjpkcTTloBFL6EwEayjP3N6z-9DzLc')\n",
+        "palm.configure(api_key='your_api_key')\n",
         "\n",
         "PALM_DEFAULTS = {\n",
         "    \"model\": 'models/text-bison-001',\n",
